--- a/src/config.json
+++ b/src/config.json
@@ -1,43 +1,42 @@
 {
   "site": {
     "url": "https://evenjie-xr.github.io",
-    "title": "Gyoza",
-    "description": "这是一个使用 Astro 和 React 开发的博客主题。",
-    "keywords": "Gyoza,blog,Astro,theme,lxchapu,博客主题",
+    "title": "EvenJie-Blog",
+    "description": "Web3D工程师的个人博客",
+    "keywords": "blog,博客,EvenJie,Jie,Even,Cesium,Three,mapbox,babylon",
     "lang": "zh-CN",
     "favicon": "/favicon.ico",
-    "appleTouchIcon": "/apple-touch-icon.png"
+    "appleTouchIcon": "https://avatars.githubusercontent.com/u/62193477?v=4"
   },
   "author": {
     "name": "lxchapu",
     "twitterId": "@lxchapu",
-    "avatar": "https://s2.loli.net/2024/04/30/ozsnuS5Ihf3xMBG.webp"
+    "avatar": "https://avatars.githubusercontent.com/u/62193477?v=4"
   },
   "hero": {
     "name": "EvenJie",
-    "bio": "A Frontend Developer.",
+    "bio": "A Web3D Enginner.",
     "description": "Frontend ( Babylon.js, Three.js, turf.js, MapboxGL, CesiumGS, Nuxt3, Vue3, TypeScript, TailwindCSS ). Backend ( Node.js, Python, Java, Spring, MySQL, PostgreSQL). GameEngine ( UnrealEngine, Unity ). XR ( ARCore, ARKit, AREngine ).",
     "socials": [
       {
         "name": "Github",
         "icon": "icon-github",
-        "url": "https://github.com/lxchapu/astro-gyoza",
+        "url": "https://github.com/EvenJie-XR",
         "color": "rgb(24, 23, 23)"
       },
       {
-        "name": "X",
-        "icon": "icon-x",
-        "url": "https://twitter.com/lxchapu",
-        "color": "rgb(36, 46, 54)"
+        "name": "Web3D-XR",
+        "icon": "icon-wechat",
+        "color": "rgb(27, 214, 108)"
       },
       {
         "name": "Email",
         "icon": "icon-mail",
-        "url": "mailto:lxchapu@outlook.com",
+        "url": "mailto:1927773824@qq.com",
         "color": "rgb(212, 70, 56)"
       }
     ],
-    "yiyan": "当第一颗卫星飞向大气层外，我们便以为自己终有一日会征服宇宙。"
+    "yiyan": "好赚的钱会越来越难赚, 难赚的钱会越来越好赚."
   },
   "color": {
     "accent": [
