--- a/src/content/friends/astro-docs.yaml
+++ b/src/content/friends/astro-docs.yaml
@@ -1,4 +1,4 @@
-title: Astro Docs
-description: Astro 入门指南
-link: https://docs.astro.build/en/getting-started/
-avatar: https://s2.loli.net/2023/12/13/YbKirkO21CtdvMD.png
+title: DeepL
+description: 最先进的翻译软件
+link: https://www.deepl.com/en/translator#zh/en-us/
+avatar: https://static.deepl.com/img/logo/deepl-logo-blue.svg
