--- a/src/content/friends/lxchapu.yaml
+++ b/src/content/friends/lxchapu.yaml
@@ -1,4 +1,4 @@
-title: '柃夏chapu'
-description: '生活明朗，万物可爱。'
-link: 'https://www.lxchapu.com'
-avatar: 'https://s2.loli.net/2024/04/23/tIxXmT45RbBDWH8.webp'
+title: 'Felo.ai'
+description: '一款国内也能流畅使用的AI搜索'
+link: 'https://felo.ai/'
+avatar: 'https://felo.ai/icon.svg'
