--- a/src/config.json
+++ b/src/config.json
@@ -85,7 +85,7 @@
       "icon": "icon-ghost"
     },
     {
-      "name": "友链",
+      "name": "常用网站",
       "link": "/friends",
       "icon": "icon-hearts"
     }
